--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,11 +32,8 @@ github_username:  jekyll
 # Build settings
 # theme: midnight
 # plugins:
-  
-remote_theme: pages-themes/midnight@v0.2.0
-plugins:
-- jekyll-feed
-- jekyll-remote-theme
+# - jekyll-feed
+theme: jekyll-theme-dinky
 
 # Exclude from processing.
 # The following items will not be processed, by default.
