--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 title: ECE 4160
-#subtitle: by HTML5 UP
+subtitle: Fast Robots
 #email: youremailaddress@gmail.com
 #description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "/ece4160" # the subpath of your site, e.g. /blog
